tests/valid/Cast_Valid_6.whiley
public export method test():
    assume (int) 1 == 1