tests/invalid/EndOfFile_Invalid_1.whiley
public export method test():
    int i = 1
    i
